prodMetadata/src/objects/Give__c.object
<CustomObject>
    <description>Stores details of a specific giveaway opportunity (experience or reward), like tickets to baseball game.</description>
    <fields>
        <fullName>AIR_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AIR Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIR_Overdue__c</fullName>
        <description>If a Give is 2 days past its earliest start date and the post-event report is not complete, it will be marked overdue.</description>
        <formula>IF ((AND (  AIR_Required__c  = True,  AIR_Completed__c  = False,  Earliest_Start_Date__c  +2 &lt; DATEVALUE(NOW()))), &quot;True&quot;, &quot;False&quot;)</formula>
        <inlineHelpText>If a Give is 2 days past its earliest start date and the post-event report is not complete, it will be marked overdue.</inlineHelpText>
        <label>AIR Overdue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIR_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>AIR Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Datestamp__c</fullName>
        <description>This gets populated with current time when listing becomes active. Override to include as new Push notification.</description>
        <inlineHelpText>This gets populated with current time when listing becomes active. Override to include as new Push notification.</inlineHelpText>
        <label>Active Datestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Available_To__c</fullName>
        <description>Which Membership Categories on the contact are eligible for this reward?</description>
        <inlineHelpText>Which Membership Categories on the contact are eligible for this reward?</inlineHelpText>
        <label>Available To</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Everyone</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Unconfirmed</fullName>
                </value>
                <value>
                    <fullName>Other Era</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Available__c</fullName>
        <formula>if(and(ispickval(Type__c,&quot;Unlimited Give&quot;),or(ispickval(Status__c,&quot;Open&quot;),ispickval(Status__c,&quot;Waitlist&quot;))),&quot;Available&quot;,
if(TEXT(Status__c) == &quot;Closed Invisible&quot;,&quot;Closed&quot;,
if(TEXT(Status__c) == &quot;Closed Visible&quot;,&quot;Closed&quot;,
if(TEXT(Status__c) == &quot;Waitlist&quot;,&quot;Waitlist&quot;,
if(TEXT(Status__c) == &quot;Open&quot;, 
if(Number_Remaining__c &lt;=0,&quot;Available&quot;,
if(Number_Remaining__c &gt; 0 &amp;&amp; Number_Remaining__c &lt; 25, &apos;ONLY &apos; + TEXT(Number_Remaining__c) +  &apos; AVAILABLE&apos;,
if(Number_Remaining__c &gt;= 25, &quot;25+ Available&quot;,&quot;&quot;
)))
,&quot;&quot;)
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Status__c</fullName>
        <description>This field contains the best status of all Give Instances.  3 if at least one Give Instance is Open, 2 if none are open but at least one is waitlisted, 1 if all at closed.</description>
        <inlineHelpText>This field contains the best status of all Give Instances.  3 if at least one Give Instance is Open, 2 if none are open but at least one is waitlisted, 1 if all at closed.</inlineHelpText>
        <label>Best Status</label>
        <summarizedField>Give_Instance__c.Numerical_Status__c</summarizedField>
        <summaryForeignKey>Give_Instance__c.Give__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be used to indicate that Campaign Members are to receive notifications.</description>
        <inlineHelpText>This field will be used to indicate that Campaign Members are to receive notifications.</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Gives</relationshipLabel>
        <relationshipName>Gives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Giveaways</fullName>
                </value>
                <value>
                    <fullName>Discounts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_Formula__c</fullName>
        <description>Tries to pull city name from the City, ST field. Fields are not separated because State functionality is based on multi-select picklist Location by State.</description>
        <formula>left(City__c,find(&quot;,&quot;,City__c)-1)</formula>
        <inlineHelpText>Tries to pull city name from the City, ST field (takes everything until the first comma).</inlineHelpText>
        <label>City Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>E.g. &quot;New York, NY&quot;.  Should be filled out for every Give. Appears on search results to identify Give location.</description>
        <inlineHelpText>E.g. &quot;New York, NY&quot;.  Should be filled out for every Give. Appears on search results to identify Give location.</inlineHelpText>
        <label>City, ST</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collect_Guest_DL_Num__c</fullName>
        <description>This field will be used to indicate if the guest Drivers License number is to be collected.</description>
        <inlineHelpText>Indicate if the guest Drivers License number is to be collected.</inlineHelpText>
        <label>Collect Guest DL Num</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>don’t collect</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>at request</fullName>
                </value>
                <value>
                    <fullName>at re-confirm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collect_Guest_DOB__c</fullName>
        <description>This field will be used to indicate if the member DOB is to be collected.</description>
        <inlineHelpText>Indicate if the member DOB is to be collected.</inlineHelpText>
        <label>Collect Guest DOB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>don’t collect</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>at request</fullName>
                </value>
                <value>
                    <fullName>at re-confirm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collect_Guest_Name__c</fullName>
        <label>Collect Guest Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>don&apos;t collect</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>at request</fullName>
                </value>
                <value>
                    <fullName>at re-confirm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collect_Guest_Shirt_Size__c</fullName>
        <description>This field will be used to indicate if the guest shirt size is to be collected.</description>
        <inlineHelpText>Indicate if the guest shirt size is to be collected.</inlineHelpText>
        <label>Collect Guest Shirt Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>don’t collect</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>at request</fullName>
                </value>
                <value>
                    <fullName>at re-confirm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collect_Mailing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collect Mailing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collect_Member_DL_Num__c</fullName>
        <description>This field will be used to indicate if the guest Drivers License number is to be collected.</description>
        <inlineHelpText>Indicate if the guest Drivers License number is to be collected.</inlineHelpText>
        <label>Collect Member DL Num</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>don’t collect</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>at request</fullName>
                </value>
                <value>
                    <fullName>at re-confirm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collect_Member_DOB__c</fullName>
        <description>This field will be used to indicate if the member DOB is to be collected.</description>
        <inlineHelpText>Indicate if the member DOB is to be collected.</inlineHelpText>
        <label>Collect Member DOB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>don’t collect</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>at request</fullName>
                </value>
                <value>
                    <fullName>at re-confirm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collect_Member_Shirt_Size__c</fullName>
        <description>This field will be used to indicate if the guest shirt size is to be collected.</description>
        <inlineHelpText>Indicate if the guest shirt size is to be collected.</inlineHelpText>
        <label>Collect Member Shirt Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>don’t collect</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>at request</fullName>
                </value>
                <value>
                    <fullName>at re-confirm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collect_Phone_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collect Phone Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collect_Special_Response_2__c</fullName>
        <description>This field will be used to indicate that a special response is to be collected for Special Instructions #2.</description>
        <inlineHelpText>Indicate that a special response is to be collected for Special Instructions #2.</inlineHelpText>
        <label>Collect Special Response #2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>don’t collect</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>at request</fullName>
                </value>
                <value>
                    <fullName>at re-confirm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collect_Special_Response_3__c</fullName>
        <description>This field will be used to indicate that a special response is to be collected for Special Instructions #3.</description>
        <inlineHelpText>Indicate that a special response is to be collected for Special Instructions #3.</inlineHelpText>
        <label>Collect Special Response #3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>don’t collect</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>at request</fullName>
                </value>
                <value>
                    <fullName>at re-confirm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collect_Special_Response_4__c</fullName>
        <description>This field will be used to indicate that a special response is to be collected for Special Instructions #4.</description>
        <inlineHelpText>Indicate that a special response is to be collected for Special Instructions #4.</inlineHelpText>
        <label>Collect Special Response #4</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>don’t collect</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>at request</fullName>
                </value>
                <value>
                    <fullName>at re-confirm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_Out_del__c</fullName>
        <description>Calculates the number of days until the give&apos;s earliest start date. For reporting/dashboard purposes.</description>
        <formula>ABS(TODAY() - Earliest_Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Out</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <formula>if(isblank(Latest_Application_Deadline__c),&quot;&quot;, 
IF(MONTH(Latest_Application_Deadline__c ) == 1,&quot;Jan&quot;,
(IF(MONTH(Latest_Application_Deadline__c ) == 2,&quot;Feb&quot;,
(IF(MONTH(Latest_Application_Deadline__c ) == 3,&quot;Mar&quot;,
(IF(MONTH(Latest_Application_Deadline__c ) == 4,&quot;Apr&quot;,
(IF(MONTH(Latest_Application_Deadline__c ) == 5,&quot;May&quot;,
(IF(MONTH(Latest_Application_Deadline__c ) == 6,&quot;Jun&quot;,
(IF(MONTH(Latest_Application_Deadline__c ) == 7,&quot;Jul&quot;,
(IF(MONTH(Latest_Application_Deadline__c ) == 8,&quot;Aug&quot;,
(IF(MONTH(Latest_Application_Deadline__c ) == 9,&quot;Sep&quot;,
(IF(MONTH(Latest_Application_Deadline__c ) == 10,&quot;Oct&quot;,
(IF(MONTH(Latest_Application_Deadline__c ) == 11,&quot;Nov&quot;,
(IF(MONTH(Latest_Application_Deadline__c ) == 12,&quot;Dec&quot;,&quot;&quot;))))))))))))))))))))))) &amp; &quot; &quot; &amp; TEXT(DAY(Latest_Application_Deadline__c )) &amp; &quot;, &quot; &amp; TEXT(YEAR(Latest_Application_Deadline__c ))
)</formula>
        <label>Deadline</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>E.g. “Watch the Orioles take on the Cardinals in a battle of the Birds. Seats are in the lower deck along the third base line.”</description>
        <inlineHelpText>E.g. “Watch the Orioles take on the Cardinals in a battle of the Birds. Seats are in the lower deck along the third base line.”</inlineHelpText>
        <label>Short Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Descriptor__c</fullName>
        <description>Generic word that describes the type of give (&quot;event&quot;, &quot;reward&quot;, or &quot;information&quot;)</description>
        <formula>if( ispickval(Type__c, &quot;Information&quot;), &quot;information&quot;,
  if ( ispickval( Category__c , &quot;Event&quot;), &quot;event&quot;, &quot;reward&quot;)
)</formula>
        <inlineHelpText>Generic word that describes the type of give (&quot;event&quot;, &quot;reward&quot;, or &quot;information&quot;)</inlineHelpText>
        <label>Descriptor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Full Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disclaimer__c</fullName>
        <description>Appears above the Submit Request button on the Request Reward page</description>
        <inlineHelpText>Appears above the Submit Request button on the Request Reward page</inlineHelpText>
        <label>Disclaimer</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <description>The distance for pending notifications.</description>
        <inlineHelpText>The distance for pending notifications.</inlineHelpText>
        <label>Distance</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Earliest_Start_Date__c</fullName>
        <label>Earliest Start Date</label>
        <summarizedField>Give_Instance__c.Start_Date__c</summarizedField>
        <summaryForeignKey>Give_Instance__c.Give__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Eligibility_Description__c</fullName>
        <description>E.g. “Open to left-handed IAVA members who live in the tri-state area.”</description>
        <inlineHelpText>E.g. “Open to left-handed IAVA members who live in the tri-state area.”</inlineHelpText>
        <label>Eligibility Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the primary external interface for the Give, especially relevant for followup.</description>
        <inlineHelpText>This is the primary external interface for the Give, especially relevant for followup.</inlineHelpText>
        <label>External POC</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Gives</relationshipLabel>
        <relationshipName>Gives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Instructions_for_Staff__c</fullName>
        <description>E.g. “Send draft of list 14 days ahead of time and final list day before event.”</description>
        <inlineHelpText>E.g. “Send draft of list 14 days ahead of time and final list day before event.”</inlineHelpText>
        <label>Fulfillment Instructions for Staff</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Instructions_for_Winner__c</fullName>
        <description>E.g. &quot;Pick up your tickets at Will Call on the date of the event.&quot;</description>
        <inlineHelpText>E.g. &quot;Pick up your tickets at Will Call on the date of the event.&quot;</inlineHelpText>
        <label>Fulfillment Instruct for Winner (deprec)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Instructions_rtf__c</fullName>
        <description>These instructions will be sent as soon as the member is confirmed for the reward (immediately for some rewards, upon selection for others).</description>
        <inlineHelpText>These instructions will be sent as soon as the member is confirmed for the reward (immediately for some rewards, upon selection for others). Note this is now a Rich Text Field that can accept links and formatting.</inlineHelpText>
        <label>Fulfillment Instructions for Winner *rtf</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Method__c</fullName>
        <label>Fulfillment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email to target</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Call in to target</fullName>
                </value>
                <value>
                    <fullName>Hold at IAVA Office</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geo_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Geo Location object which stores Latitude, Longitude values</description>
        <label>Geo Location</label>
        <referenceTo>Geo_Location__c</referenceTo>
        <relationshipLabel>Gives</relationshipLabel>
        <relationshipName>Gives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Geocode_Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this checkbox to exclude the account from the Geo Force Geocode process</description>
        <inlineHelpText>Check this box to exclude from geocoding process</inlineHelpText>
        <label>Geocode Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Gives</relationshipLabel>
        <relationshipName>Gives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Give_Date_Display__c</fullName>
        <description>Formats dates for the Give Instance object in reward listings.</description>
        <formula>IF( Number_of_Give_Instances__c &gt; 1, &quot;Multiple Dates&quot; &amp; if(isblank(Earliest_Start_Date__c),&quot;&quot;,&quot; from &quot; &amp;  text(month(Earliest_Start_Date__c)) &amp; &quot;/&quot; &amp; text(day(Earliest_Start_Date__c)) &amp; &quot;/&quot; &amp; text(Year(Earliest_Start_Date__c)) ),  if(isblank(Earliest_Start_Date__c),&quot;&quot;, text(month(Earliest_Start_Date__c)) &amp; &quot;/&quot; &amp; text(day(Earliest_Start_Date__c)) &amp; &quot;/&quot; &amp; text(Year(Earliest_Start_Date__c)) ) )</formula>
        <inlineHelpText>Formats dates for the Give Instance object in reward listings.</inlineHelpText>
        <label>Give Date Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Highlight_Listing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates which past and present events appear on the page of highlighted events.</description>
        <inlineHelpText>Indicates which past and present events appear on the page of highlighted events.</inlineHelpText>
        <label>Highlight Listing on homepage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ignore_Dates_and_Availability__c</fullName>
        <defaultValue>false</defaultValue>
        <description>OVERRIDE SWITCH: If this is checked, this Give will not automatically open or close itself based on Give Instance Start and End Dates or on whether any Give Instances are open.</description>
        <inlineHelpText>OVERRIDE SWITCH: If this is checked, this Give will not automatically open or close itself based on Give Instance Start and End Dates or on whether any Give Instances are open.</inlineHelpText>
        <label>Ignore Dates and Availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal POC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Gives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Latest_Application_Deadline__c</fullName>
        <label>Latest Application Deadline</label>
        <summarizedField>Give_Instance__c.Application_Deadline__c</summarizedField>
        <summaryForeignKey>Give_Instance__c.Give__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Latest_End_Date__c</fullName>
        <label>Latest End Date</label>
        <summarizedField>Give_Instance__c.End_Date__c</summarizedField>
        <summaryForeignKey>Give_Instance__c.Give__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Latest_Start_Date__c</fullName>
        <label>Latest Start Date</label>
        <summarizedField>Give_Instance__c.Start_Date__c</summarizedField>
        <summaryForeignKey>Give_Instance__c.Give__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Listing_Start_Date__c</fullName>
        <description>Date when Planned Give becomes available on site.</description>
        <inlineHelpText>Date when Planned Give becomes available on site.</inlineHelpText>
        <label>Listing Start Date (if status = Planned)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_Description__c</fullName>
        <description>E.g. “22nd &amp; Main”
E.g. “Madison Square Garden”
E.g. “Tres Agaves Restaurant, back patio”</description>
        <inlineHelpText>E.g. “22nd &amp; Main”
E.g. “Madison Square Garden”
E.g. “Tres Agaves Restaurant, back patio”</inlineHelpText>
        <label>Location or Venue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_Formula__c</fullName>
        <formula>IF(NOT(National_Give__c),IF(ISBLANK( Zip_Code_s__c ),&quot;Various Locations&quot;, City__c ),&quot;National&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Sort__c</fullName>
        <description>Background field to help with sorting search results</description>
        <formula>if(National_Give__c,3,
  if(not(isblank(Location_by_State_s__c)),1,
     if(not(isblank( Zip_Code_s__c)),1,
4)))</formula>
        <inlineHelpText>Background field to help with sorting search results</inlineHelpText>
        <label>Location Sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Street_Address__c</fullName>
        <description>Street address of the venue (so it can be mapped).</description>
        <inlineHelpText>Street address of the venue (so it can be mapped).</inlineHelpText>
        <label>Location Street Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_by_State_s__c</fullName>
        <description>E.g. “NY, CT, NJ, VA, DC”.</description>
        <inlineHelpText>E.g. “NY, CT, NJ, VA, DC”.</inlineHelpText>
        <label>Location by State(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Units_per_Member__c</fullName>
        <description>If greater than 1 and &quot;Member Cannot Select Quantity&quot; is unchecked, member can choose desired quantity of units up to this maximum,  If blank, quantity is unlimited.</description>
        <inlineHelpText>If greater than 1 and &quot;Member Cannot Select Quantity&quot; is unchecked, member can choose desired quantity of units up to this maximum,  If blank, quantity is unlimited.</inlineHelpText>
        <label>Maximum Units per Member</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_Cannot_Select_Quantity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, all winners get same quantity of tickets/units/etc.</description>
        <inlineHelpText>If checked, all winners get same quantity of tickets/units/etc.</inlineHelpText>
        <label>Member Cannot Select Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Message_Text__c</fullName>
        <description>This field will be used to store the text of the notification message that is to be delivered.</description>
        <inlineHelpText>This field will be used to store the text of the notification message that is to be delivered.</inlineHelpText>
        <label>Message Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>More_Info_Link__c</fullName>
        <description>E.g. website of a store, concert venue or show description.</description>
        <inlineHelpText>E.g. website of a store, concert venue or show description.</inlineHelpText>
        <label>More Info Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Must_be_21__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requires member verifies 21+ age during Give Request.</description>
        <inlineHelpText>Requires member verifies 21+ age during Give Request.</inlineHelpText>
        <label>Must be 21+</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Must_be_21_for_guest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Must be 21 for guest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>National_Give__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Overides zip codes and states.</description>
        <inlineHelpText>Overrides zip codes and states.</inlineHelpText>
        <label>National Give</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>National__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used to indicate that the notification will be sent nation-wide to all Contacts.</description>
        <inlineHelpText>This field will be used to indicate that the notification will be sent nation-wide to all Contacts.</inlineHelpText>
        <label>National</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
</CustomObject>